# visa-mvp

./: .ci-trigger.txt  .gitignore  ALL_WORKLOGS_MERGED.md  A_WORKLOG.md  CHANGELOG.md  CONTRIBUTING.md  C_WORKLOG.md  DEMO-ACCOUNT.md  DEPLOY_HANDOFF_2026-07-22.md  DIAGNOSE_LEAD_SCORING_V5.md  DIAGNOSE_TOURIST_RULES_DEV_DESIGN.md  FAQ.md  MVP-LAUNCH-CHECKLIST.md  PERFORMANCE.md  PITCH.md  README.md  RUNBOOK.md  SECURITY.md  TECH_ARCHITECTURE.md  TEST-ACCOUNTS.md  TESTING.md  agent-team-dashboard.html  board.md  diagnose-income-redesign.html  materials-wizard-redesign-v2.html
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WORKLOG.json  WORKLOG.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_rpa_tests.py
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  celery_app.py  main.py
backend/data/: passport_field_mapping.yaml  rpa_config.yaml
backend/docs/: backup-runbook.md
backend/scripts/: _e2e_ds160.py  _e2e_seed.py  _patch_w47c_metadata.py  backfill_w26_email_username.py  backup.py  build-multiarch.sh  migrate_ds160_code_fields.py  preflight_prod.py  rebuild_demo_users.py  restore.py  run_stripe_local_e2e.py  seed_admin_test_users.py  seed_demo_data.md  seed_demo_data.py  seed_demo_orders.py  seed_hero_destinations.py  seed_rag_chunks.py  seed_rag_chunks_en.py  seed_rag_chunks_id.py  seed_rag_chunks_vi.py  seed_rag_sources.py  seed_schengen_26.py  seed_visa_countries.py  test_profile_e2e.py  test_send_verification_email.py
backend/tests/: __init__.py  conftest.py  test_auth.py  (+7 more)
(+895 files in other folders)
